--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 .card {
-    width: 20rem
+  width: 20rem;
+  height: 24rem;
 }
 
 img {
-    width: 15rem
+  width: 18rem;
 }
